--- a/CSS/class-5/index.html
+++ b/CSS/class-5/index.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Css Text</title>
-</head>
-<body>
-    <h1 class="heading">Text Properties:</h1>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt at, tempora nesciunt veniam, adipisci quos in qui velit necessitatibus hic, exercitationem aperiam fuga alias delectus provident cupiditate unde. Autem totam praesentium omnis, laboriosam et rem quisquam consequuntur dolor blanditiis voluptatum asperiores. Animi, totam? Reiciendis quaerat, deserunt soluta nostrum suscipit ab incidunt hic beatae voluptates qui non dolores minima perspiciatis quis unde quasi dignissimos. Quis, quia, debitis praesentium a sequi iusto ab iste labore, consequatur est quo assumenda odio repellat sed tempora expedita eveniet molestiae impedit laborum! Commodi quisquam mollitia adipisci reiciendis ipsam consequuntur nisi iste maiores, explicabo distinctio, debitis fugit!
+<html>
+    <head>my files</head>
+    <body>
+        <h3>backend development stuff</h3>
+        <ul>
+            <li>javascripts</li>
+            <li>node js</li>
+            <li>express js</li>
+            <li>python</li>
+            <li>ruby</li>
 
-    </p>
-</body>
+        </ul>
+        <h3>frontend development</h3>
+        <ol>
+            <li>html</li>
+            <li>CSS</li>
+            <li>REACT JS</li>
+            <li>NEXT JS</li>
+            <li>MUI</li>
+
+        </ol>
+        <form>
+            <label for="fname">First Name</label>
+            <input type="text">
+            <br>
+            <label for="iname">Last Name</label>
+            <input type="text">
+            <br>
+            <input type="submit">
+
+        </form>
+        <form>
+            <label for="fname">First Name</label>
+            <input type="text">
+            <br>
+            <label for="iname">Last Name</label>
+            <input type="text">
+            <br>
+            <input type="button" value="Click me">
+            <br>
+            <div>
+            Email: <input type="email">
+        </div>
+        <div>
+            password: <input type="password" name="userpassword">
+        </div>
+        Date Of Birth: <input type="date" name="dob">
+        <br><br>
+        Gender.............<br>
+        Male <input type="radio" name="gender"> Female <input type="radio" name="gender"> Other <input type="radio" name="gender">
+        <br><br>
+        Language.......<br>
+        Eng <input type="checkbox" name="Language"> odia<input type="checkbox" name="Language"> Hindi<input type="checkbox" name="Language">
+        <br><br>
+        Time........<br>
+        time <input type="time" name="submittime">
+        <br><br>
+        month........<br>
+         month <input type="month" name="dobmonth">
+         <br><br>
+         Color......<br>
+         color pick <input type="color" name="diffcolor">
+         <br><br>
+         my document <input type="file" name="mydoc">
+         <br><br>
+         person count <input type="number" name="personno">
+         <br><br>
+         range <input type="range" name="range">
+         <br><br>
+         weeks<input type="week" name="weekname">
+         <br><br>
+         Search <input type="search" name="search">
+         <br><br>
+         website URL <input type="url" name="urlname">
+         <br><br>
+         my phto <input type="image" src="img-2.webp">
+         <br><br>
+         My Telephone no <input type="tel" name="telephoneno">
+         <br><br>
+         <label for="fname">First Name</label>
+         <input type="text">
+         <br>
+         <input type="hidden" name="custid">
+         <br>
+
+
+
+
+
+
+
+
+        </form>
+    </body>
 </html>
