--- a/CSS/Project/project-1/project-2/index.html
+++ b/CSS/Project/project-1/project-2/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My 2ND Project</title>
     <link rel="stylesheet" href="style.css">
-    <title>CSS BOX MODEL</title>
 </head>
 <body>
-    <h1>CSS BOX MODEL</h1>
-    <div class="main_div">
-        <div class="box">Box1</div>
-        <div class="box">Box2</div>
-        <div class="box">Box3</div>
-    </div>
+    <section class="pimg1">
+        <div class="ptext">
+            <span class="textbg">
+                PARALLAX WEBSITE </span>
+        </div>
+    </section>
 </body>
 </html>
