--- a/CSS/class-6/index.html
+++ b/CSS/class-6/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>CSS BOX MODEL</title>
-</head>
-<body>
-    <h1>CSS BOX MODEL</h1>
-    <div class="main_div">
-        <div class="box">Box1</div>
-        <div class="box">Box2</div>
-        <div class="box">Box3</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>CSS Flexbox</title>
+  </head>
+  <body>
+    <div class="main-section">
+      <div id="box-1" class="box">Box 1</div>
+      <div id="box-2" class="box">Box 2</div>
+      <div id="box-3" class="box">Box 3</div>
+      <div id="box-4" class="box">Box 4</div>
     </div>
-</body>
+  </body>
 </html>
